Fix treemaps on IE8

--- a/sonar-server/src/main/webapp/stylesheets/layout.css
+++ b/sonar-server/src/main/webapp/stylesheets/layout.css
@@ -275,7 +275,6 @@ ul.sidebar select, ul.sidebar input {
 }
 
 .page-split-right {
-  position: relative;
   display: block;
   margin: 0;
   vertical-align: top;
